<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="#f4ddf9"
    tools:context="com.ramirez.acercade.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/Erika"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/erika"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/nombre"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/carrera"
        android:gravity="center"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:layout_marginLeft="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/git"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/github" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/twi"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/twitter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twit"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/correo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/gmail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:textSize="12sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cel"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/cel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/cel"
                android:textSize="12sp" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonShare"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Share"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/colorPrimary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/powered"
        android:textSize="10sp" />

</LinearLayout>
